RESOLVED FIXED104382
REGRESSION(r135863): GtkLauncher --help no longer displays all help options
https://bugs.webkit.org/show_bug.cgi?id=104382
Summary REGRESSION(r135863): GtkLauncher --help no longer displays all help options
Philippe Normand
Reported 2012-12-07 10:50:40 PST
Before: Help Options: -h, --help Show help options --help-all Show all help options --help-gtk Show GTK+ Options --help-websettings WebKitWebSettings properties Application Options: --display=DISPLAY X display to use -------------- Currently: Help Options: -h, --help Show help options --help-all Show all help options --help-gst Show GStreamer Options -------------- I think the gst_init() call is the culprit. If I remove it I still see the gst options group in the help, along with the other options, like help-websettings. But it'd be good to check this is really the issue.
Attachments
Patch (1.26 KB, patch)
2012-12-10 04:26 PST, Víctor M. Jáquez L.
no flags
Víctor M. Jáquez L.
Comment 1 2012-12-10 04:26:45 PST
WebKit Review Bot
Comment 2 2012-12-10 05:52:16 PST
Comment on attachment 178515 [details] Patch Clearing flags on attachment: 178515 Committed r137141: <http://trac.webkit.org/changeset/137141>
WebKit Review Bot
Comment 3 2012-12-10 05:52:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.