REGRESSION(r135863): GtkLauncher --help no longer displays all help options https://bugs.webkit.org/show_bug.cgi?id=104382

Patch by Víctor Manuel Jáquez Leal <vjaquez@igalia.com> on 2012-12-10
Reviewed by Philippe Normand.

Remove gst_init() because it steals the GOptionContext.
gst_init_get_option_group() already does the initialization job.

* GtkLauncher/main.c:
(main):

Canonical link: https://commits.webkit.org/122700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137141 268f45cc-cd09-0410-ab3c-d52691b4dbfc